==> Edmond-Sung-Tymphany/Hendrix_M_Lite_GD/sw/project_files/mc-13/stm32/attachedDevices.c <==
#include "stm32f0xx_usart.h"
#include "deviceTypes.h"
#include "attachedDevices.h"
#include "trace.h"
#include "product.config"
#define ADC_THRESHOLD_LEVEL_1   0
#define ADC_THRESHOLD_LEVEL_2   372//300
#define ADC_THRESHOLD_LEVEL_3   1117//900
#define ADC_THRESHOLD_LEVEL_4   1738//1400
#define ADC_THRESHOLD_LEVEL_5   2669//2150
#define ADC_THRESHOLD_LEVEL_6   3351//2700
#define ADC_THRESHOLD_RANGE_1   ADC_THRESHOLD_LEVEL_1,ADC_THRESHOLD_LEVEL_2
#define ADC_THRESHOLD_RANGE_2   ADC_THRESHOLD_LEVEL_2,ADC_THRESHOLD_LEVEL_3
#define ADC_THRESHOLD_RANGE_3   ADC_THRESHOLD_LEVEL_3,ADC_THRESHOLD_LEVEL_4
#define ADC_THRESHOLD_RANGE_4   ADC_THRESHOLD_LEVEL_4,ADC_THRESHOLD_LEVEL_5
#define ADC_THRESHOLD_RANGE_5   ADC_THRESHOLD_LEVEL_5,ADC_THRESHOLD_LEVEL_6

void UartDrv_Init(eTpUartDevice id)
{
    GPIO_InitTypeDef GPIO_InitStructure;
    switch(id)
    {
#if defined(HW_VERSION_ES2)
        case TP_UART_DEV_1:
            RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOA, ENABLE);
            RCC_APB2PeriphClockCmd(RCC_APB2Periph_USART1,ENABLE);
            /* Configure the HSI as USART clock */
            RCC_USARTCLKConfig(RCC_USART1CLK_HSI);

            GPIO_PinAFConfig(GPIOA, GPIO_PinSource4, GPIO_AF_1);
            GPIO_PinAFConfig(GPIOA, GPIO_PinSource5, GPIO_AF_1);

            /* Configure USART1 pins:  Rx and Tx ----------------------------*/
            GPIO_InitStructure.GPIO_Pin     = GPIO_Pin_4 | GPIO_Pin_5;
            GPIO_InitStructure.GPIO_Speed   = GPIO_Speed_50MHz;
            GPIO_InitStructure.GPIO_Mode    = GPIO_Mode_AF;
            GPIO_InitStructure.GPIO_OType   = GPIO_OType_PP;
            GPIO_InitStructure.GPIO_PuPd    = GPIO_PuPd_UP;
            GPIO_Init(GPIOA, &GPIO_InitStructure);
            break;
#else if defined(HW_VERSION_EVT)
        case TP_UART_DEV_1:
            RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOA, ENABLE);
            RCC_APB2PeriphClockCmd(RCC_APB2Periph_USART1,ENABLE);
            /* Configure the HSI as USART clock */
            RCC_USARTCLKConfig(RCC_USART1CLK_HSI);

            GPIO_PinAFConfig(GPIOA, GPIO_PinSource9, GPIO_AF_1);
            GPIO_PinAFConfig(GPIOA, GPIO_PinSource10, GPIO_AF_1);

            /* Configure USART1 pins:  Rx and Tx ----------------------------*/
            GPIO_InitStructure.GPIO_Pin     = GPIO_Pin_9 | GPIO_Pin_10;
            GPIO_InitStructure.GPIO_Speed   = GPIO_Speed_50MHz;
            GPIO_InitStructure.GPIO_Mode    = GPIO_Mode_AF;
            GPIO_InitStructure.GPIO_OType   = GPIO_OType_PP;
            GPIO_InitStructure.GPIO_PuPd    = GPIO_PuPd_UP;
            GPIO_Init(GPIOA, &GPIO_InitStructure);
            break;
#endif
        default:
        ASSERT(0);
        break;
    }

}
