==> Edmond-Sung-Tymphany/Hendrix_M_Lite_GD/sw/project_files/mofa/pic32/attachedDevices.c <==
#include "bsp.h"
#include "attachedDevices.h"
#include "UartDrv.h"
#include "AdcDrv.h"
#include "LedDrv.h"
#include "GpioDrv.h"
#include "DspDrv.h"
#include "trace.h"
#include "product.config"
#define ADC_THRESHOLD_LEVEL_1   248
#define ADC_THRESHOLD_LEVEL_2   351
#define ADC_THRESHOLD_LEVEL_3   465
#define ADC_THRESHOLD_LEVEL_4   562
#define ADC_THRESHOLD_LEVEL_5   688
#define ADC_THRESHOLD_RANGE_1   ADC_THRESHOLD_LEVEL_1,ADC_THRESHOLD_LEVEL_2
#define ADC_THRESHOLD_RANGE_2   ADC_THRESHOLD_LEVEL_2,ADC_THRESHOLD_LEVEL_3
#define ADC_THRESHOLD_RANGE_3   ADC_THRESHOLD_LEVEL_3,ADC_THRESHOLD_LEVEL_4
#define ADC_THRESHOLD_RANGE_4   ADC_THRESHOLD_LEVEL_4,ADC_THRESHOLD_LEVEL_5\

void UartDrv_Init(eTpUartDevice id)
{
    switch(id)
    {
    case TP_UART_DEV_1:
        mPORTBClearBits( BIT_9 );
        mPORTBSetPinsDigitalIn( BIT_9 );
        TYM_SET_BIT(CNPUB, CNB9_PULLUP_ENABLE);

        mPORTFClearBits( BIT_5 );
        mPORTFSetPinsDigitalOut( BIT_5 );
        TYM_SET_BIT(CNPUF, CNF5_PULLUP_ENABLE);

        /* select pin as non-analog */
        ANSELBbits.ANSB9=0;
        //ANSELFbits.ANSF5=0; //no ANSEL reg. for port F.

        PPSUnLock;
        /* for groups see pps.h */
        PPSInput( 1, U1RX, RPB9 );
        PPSOutput( 2, RPF5, U1TX );
        PPSLock;
        break;
#if NUM_OF_UART >= 2
    case TP_UART_DEV_2:
        mPORTBClearBits( BIT_10 );
        mPORTBSetPinsDigitalIn( BIT_10 );
        TYM_SET_BIT(CNPUB, CNB10_PULLUP_ENABLE);

        mPORTDClearBits( BIT_11 );
        mPORTDSetPinsDigitalOut( BIT_11 );
        TYM_SET_BIT(CNPUD, CND11_PULLUP_ENABLE);

        /* select pin as non-analog */
        ANSELBbits.ANSB10=0;
        //ANSELDbits.ANSD11=0; // no analog function for D11

        PPSUnLock;
        /* for groups see pps.h */
        PPSInput( 1, U2RX, RPB10 );
        PPSOutput( 2, RPD11, U2TX );
        PPSLock;
        break;
#endif  // NUM_OF_UART >= 2
    default:
        ASSERT(0);
        break;
    }
}
